# configen

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configen/: __init__.py  generate.py  generate_test.py  merge.py  merge_test.py  utils.py  utils_test.py
