[tool.poetry]
name = "configen"
version = "0.1.1"
description = "Config Generator"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/configen"
[tool.poetry.dependencies]
python = "^3.7"
omegaconf = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "line-too-long",
]